--- a/site/module2-solution/mod2_solution.css
+++ b/site/module2-solution/mod2_solution.css
@@ -42,7 +42,7 @@ h1 {
   border: 1px solid blue;
   float: right;
   background-color: #D8D8D8;
-  margin-bottom: 5%;
+  margin-bottom: 10px%;
   margin-left: 10px;
 
 }
